<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    tools:context=".Settings">
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1">
    <TableRow
        style="@style/defaultStyle"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1">
        <TextView
            style="@style/defaultTextMargin"
            android:id="@+id/firstNameAsk"
            android:layout_weight=".25"
            android:hint="@string/firstNameHint"
            android:layout_width="0dp"
            android:text="@string/firstNameText"
            android:layout_height="match_parent"/>
        <EditText
            style="@style/noMarginWhite"
            android:id="@+id/firstNameInput"
            android:layout_weight=".75"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </TableRow>
    <TableRow
        style="@style/defaultStyle"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1">
        <TextView
            style="@style/defaultTextMargin"
            android:id="@+id/lastNameAsk"
            android:layout_weight=".25"
            android:layout_width="0dp"
            android:hint="@string/lastNameHint"
            android:text="@string/lastNameText"
            android:layout_height="match_parent"/>
        <EditText
            style="@style/noMarginWhite"
            android:id="@+id/lastNameInput"
            android:layout_weight=".75"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </TableRow>
    <TableRow
        style="@style/defaultStyle"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1">
        <TextView
            style="@style/defaultTextMargin"
            android:id="@+id/emailAsk"
            android:layout_weight=".25"
            android:layout_width="0dp"
            android:hint="@string/emailHint"
            android:text="@string/emailText"
            android:layout_height="match_parent"/>
        <EditText
            style="@style/noMarginWhite"
            android:id="@+id/emailInput"
            android:layout_weight=".75"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </TableRow>
    <TableRow
        style="@style/defaultStyle"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1">
        <TextView
            style="@style/defaultTextMargin"
            android:id="@+id/passwordNameAsk"
            android:layout_weight=".25"
            android:layout_width="0dp"
            android:text="@string/passwordText"
            android:layout_height="match_parent"/>
        <EditText
            style="@style/noMarginWhite"
            android:inputType="textPassword"
            android:id="@+id/passwordInput"
            android:layout_weight=".75"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </TableRow>
    <TableRow
        style="@style/defaultStyle"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1">
        <TextView
            style="@style/defaultTextMargin"
            android:id="@+id/prefcurrencyAsk"
            android:layout_weight=".25"
            android:layout_width="0dp"
            android:text="@string/prefCurrencyText"
            android:layout_height="match_parent"/>
        <Spinner
            style="@style/defaultText"
            android:id="@+id/currencyInput"
            android:spinnerMode="dropdown"
            android:layout_weight=".75"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </TableRow>
    <TableRow
        style="@style/defaultStyle"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1">
        <TextView
            style="@style/defaultTextMargin"
            android:id="@+id/prefStockAsk"
            android:layout_weight=".25"
            android:layout_width="0dp"
            android:text="@string/prefStockText"
            android:layout_height="match_parent"/>

        <Spinner
            android:id="@+id/stockInput"
            style="@style/defaultText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".75"
            android:spinnerMode="dropdown" />
    </TableRow>
    <TableRow
        style="@style/defaultStyle"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1">
        <TextView
            style="@style/defaultTextMargin"
            android:id="@+id/dateAsk"
            android:layout_weight=".25"
            android:layout_width="0dp"
            android:text="@string/lastUpdateText"
            android:layout_height="match_parent"/>
        <TextView
            style="@style/defaultTextMargin"
            android:id="@+id/dateInput"
            android:text="@string/dateInput"
            android:layout_weight=".75"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </TableRow>

    <LinearLayout
        android:orientation="vertical"
        style="@style/defaultStyle"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">
        <Button
            android:id="@+id/settingsButton"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/settingsButton"
            android:onClick="saveInformation"
            android:layout_width="match_parent">
        </Button>
        <TextView
            style="@style/defaultTextMargin"
            android:id="@+id/errorSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"/>
    </LinearLayout>
</TableLayout>
</ScrollView>