<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@color/Black"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        style="@style/defaultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:id="@+id/subject"
        android:hint="@string/subject"/>


    <EditText
        style="@style/defaultText"
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/subject"
        android:hint="@string/note" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="15dp"
        android:text="@string/AddNote"
        android:id="@+id/addButton"
        android:onClick="onClickAddButton"/>

</RelativeLayout>