<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/Black"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
        style="@style/defaultText"
        android:textSize="30sp"
        android:id="@+id/completeSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject" />

    <EditText
        style="@style/defaultText"
        android:id="@+id/completeText"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:hint="@string/note" />

    </LinearLayout>


    <Button
        android:id="@+id/Create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/createNote"
        android:onClick="createNote"/>

</RelativeLayout>