<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Black"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".StockDown.StockSellActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
    <TextView
        style="@style/defaultText"
        android:id="@+id/stocksText"
        android:layout_width="0dp"
        android:layout_weight="75"
        android:layout_height="wrap_content"
        android:text="@string/sellStocks" />

        <EditText
            style="@style/defaultText"
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:id="@+id/stockNumber"/>


    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
    <TextView
        style="@style/defaultText"
        android:layout_width="0dp"
        android:layout_weight="75"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/sell" />

    <EditText
        style="@style/defaultText"
        android:layout_width="0dp"
        android:layout_weight="25"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:id="@+id/totalSellUnit"/>
    </LinearLayout>

    <Button
        android:gravity="center"
        android:id="@+id/sellout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sellbutton"
        android:onClick="sellStock"/>
</LinearLayout>

</LinearLayout>